force-app/main/default/objects/ffr__ReportingPageTableColumn__c/ffr__ReportingPageTableColumn__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffr__helpreportingpagetablecolumn</customHelpPage>
    <label>Reporting Page Table Column</label>
    <nameField>
        <label>Reporting Page Table Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Page Table Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>