force-app/main/default/objects/ffr__ReportingPageTableColumn__c/fields/ffr__Order__c.field-meta.xml
<CustomField>
    <fullName>ffr__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>