force-app/main/default/objects/ffr__ReportingPageTableColumn__c/recordTypes/ffr__ColumnCalculation.recordType-meta.xml
<RecordType>
    <fullName>ffr__ColumnCalculation</fullName>
    <active>true</active>
    <description>Use this record type to add a column calculation to your reporting table.</description>
    <label>Column Calculation</label>
</RecordType>