force-app/main/default/objects/ffr__ReportingPageTableColumn__c/recordTypes/ffr__Group.recordType-meta.xml
<RecordType>
    <fullName>ffr__Group</fullName>
    <active>true</active>
    <description>Use this record type to add a group column to your reporting table.</description>
    <label>Group</label>
</RecordType>