force-app/main/default/objects/ffr__ReportingPageTableColumn__c/recordTypes/ffr__Value.recordType-meta.xml
<RecordType>
    <fullName>ffr__Value</fullName>
    <active>true</active>
    <description>Use this record type to add a value column to your reporting table.</description>
    <label>Value</label>
</RecordType>